# next

./: .env.example  .gitignore  LICENSE  README.md  main.py  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  merge-release.yml
etc/: versioning-example.json  versioning.json
examples/: .env.example
examples/etc/: example.config.json
src/: lib.py  next.py
src/example_pkg/: next.py
src/never/: __init__.py  lib.py  next.py
