[metadata]
name = never
version = 1.2.0
author = Sil Westerveld
author_email = dev+never@silwesterveld.com
description = Never == Next Version
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/swesterveld/next
project_urls =
    Bug Tracker = https://github.com/swesterveld/next/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: System :: Software Distribution
    Topic :: Utilities
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src